[tool.poetry]
name = "wise-cache"
version = "0.1.0"
description = "Knowledge base management package"
authors = ["eppv <evgeniypalych@gmail.com>"]
license = "DBAD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
